--- a/app/src/main/res/layout/activity_random_restaurant.xml
+++ b/app/src/main/res/layout/activity_random_restaurant.xml
@@ -13,12 +13,13 @@
         android:layout_width="match_parent"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+
+        <EditText
+            android:id="@+id/etLocation"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="50dp"
+            android:text="Location"
+            android:singleLine="true"/>
 
     </android.support.design.widget.AppBarLayout>
 
