--- a/app/src/main/res/layout/image_restaurant.xml
+++ b/app/src/main/res/layout/image_restaurant.xml
@@ -6,10 +6,23 @@
 
     <TextView
         android:id="@+id/nameRestaurant"
-        android:text="Hello World!"
+        android:text=""
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:layout_marginLeft="25dp"/>
+
+    <TextView
+        android:id="@+id/tvCategory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="25dp"/>
+
+    <ImageView
+        android:id="@+id/ivRestaurant"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="25dp"
+        />
 
 </LinearLayout>
