--- a/app/src/main/res/layout/image_restaurant.xml
+++ b/app/src/main/res/layout/image_restaurant.xml
@@ -10,19 +10,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:layout_marginLeft="25dp"/>
+        android:layout_gravity="center_horizontal"
+        android:textSize="20dp"/>
 
     <TextView
         android:id="@+id/tvCategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="25dp"/>
+        android:layout_margin="25dp"
+        android:layout_gravity="center_horizontal"/>
 
     <ImageView
         android:id="@+id/ivRestaurant"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center_horizontal"
+        />
+
+    <TextView
+        android:id="@+id/tvSwipeLeft"
+        android:text="&lt;&lt;&lt; Swipe Left to pass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="25dp"
-        />
+        android:layout_gravity="left"/>
+
+    <TextView
+        android:id="@+id/tvSwipeRight"
+        android:text="Swipe Right if you like it &gt;&gt;&gt;"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="25dp"
+        android:layout_gravity="right"/>
 
 </LinearLayout>
