--- a/app/src/main/res/layout/activity_random_restaurant.xml
+++ b/app/src/main/res/layout/activity_random_restaurant.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,7 +18,9 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text="Location"
-            android:singleLine="true"/>
+            android:singleLine="true"
+            android:inputType="textCapWords"
+            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"/>
 
     </android.support.design.widget.AppBarLayout>
 
